# SCP-foundation-editor

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE  Main.py  README.md  README_TAURI_VUE.md  SCPEditor.spec  Update_Log.md  build_windows.bat  index.html  package-lock.json  package.json  requirements.txt  skills-lock.json  test.md  tsconfig.json  vite.config.ts  wikidot_edit_alpha-1.py  wikidot_edit_alpha-1_new.py  wikidot_edit_alpha-1_old.py  wikidot_edit_alpha_0.0.1.py  wikidot_edit_alpha_0.0.2.py  wikidot_edit_alpha_0.0.3.py  wikidot_edit_alpha_0.0.4.py  wikidot_edit_alpha_0.0.5.py  wikidot_edit_alpha_0.0.6.py  wikidot_edit_alpha_0.0.7.py  wikidot_edit_alpha_0.0.8.py  wikidot_edit_alpha_0.0.9.py  wikidot_edit_alpha_0.1.0.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
code_view/: .eslintrc.json  .gitignore  CREDITS.md  README.md  build.js  code_view.html  editor.js  index.html  main.py  package.json
controllers/: MAIN_CONTROLLER.py  initiate_save.py  insert_basalt_div.py  main_controller.py  menu_controller.py  read_from_desktop.py  render_controller.py  run_insert_js.py  toolbar_controller.py
core/: banner.py  logger.py
crates/Wparser/: Cargo.toml
crates/Wparser/src/: lib.rs
crates/w_parser/: Cargo.toml
crates/w_parser/src/: lib.rs  paths.rs  resourcepack_includer.rs
crates/w_parser/src/ftml_interceptor/: mod.rs
crates/w_parser/src/ftml_interceptor/catch_include/: mod.rs
crates/w_parser/src/ftml_interceptor/div/: div_data_attacher.rs  mod.rs
crates/w_parser/src/ftml_interceptor/footnote/: footnote_interceptor.rs  footnote_parser.rs  mod.rs
crates/w_parser/src/ftml_interceptor/footnoteblock/: footnoteblock_interceptor.rs  mod.rs
crates/w_parser/src/ftml_interceptor/module_css/: css_cacher.rs  mod.rs
crates/w_parser/src/ftml_interceptor/module_rate/: mod.rs  rate_interceptor.rs
crates/w_parser/src/ftml_interceptor/note/: mod.rs  note_br_cleaner.rs  note_cleaner.rs  note_interceptor.rs  note_parser.rs
crates/w_parser/src/ftml_interceptor/preprocess_interceptor/: mod.rs  theme_interceptor.rs  unused_newline_interceptor.rs  unused_variable_interceptor.rs  user_ignore_interceptor.rs
crates/w_parser/src/ftml_interceptor/span/: mod.rs  span_data_attacher.rs
crates/w_parser/src/ftml_interceptor/user/: mod.rs  user_interceptor.rs  user_parser.rs
crates/w_parser/src/ftml_normalizer/: image_normalizer.rs  mod.rs
crates/w_parser/src/ftml_normalizer/include_normalizer/: component_image_normalizer.rs  mod.rs
crates/w_parser/src/ftml_panic_blocker/: mod.rs
crates/w_parser/test/: demo.ftml  demo.html
docs/: What_the_hell_did_Wikidot_do_on_your_include.md  bug.md
engine/rust_engine/ftml_client_py/: Cargo.toml
engine/rust_engine/ftml_client_py/ftml_client_py/: Cargo.toml
engine/rust_engine/ftml_client_py/src/: lib.rs
engine/rust_engine/ftml_client_py/src/ACS/: model.rs  parse.rs
engine/rust_engine/ftml_client_py/src/AIM/: mod.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/acs/: mod.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/aim/: mod.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/collapsible/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/fake_prot/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/footnotes/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/image/: mod.rs
engine/rust_engine/ftml_client_py/src/image/include_image/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/image/normal_image/: placeholder.rs
engine/rust_engine/ftml_client_py/src/license/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/tabview/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/themes_div/: mod.rs
engine/rust_engine/ftml_client_py/src/themes_div/basalt/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/toc/: mod.rs  model.rs  parse.rs  render.rs
engine/rust_engine/ftml_client_py/src/user/: mod.rs  model.rs  parse.rs  render.rs
saves/: README.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/handlers/: connect_exporter.rs  connect_parser.rs  insert_user_css.rs  log_and_write_json.rs  mod.rs  module_rate.rs  open_code_view.rs  save.rs  settings.rs  splashscreen.rs  theme.rs  write_ignore_lines_metadata.rs
src-tauri/src/utils/: path.rs
(+759 files in other folders)
