[workspace]
resolver = "3"
members = [
    "src-tauri",
    "crates/w_parser",
    "crates/ltmf",
#    "crates/wiki_css", This libaray is no longer support
]

[workspace.package]
version = "3.0.0-beta.2"
edition = "2024"
authors = ["wasd243"]

[workspace.dependencies]
serde_json = "1.0.149"
regex = "1"
directories = "6.0.0"
log = "0.4.33"
env_logger = "0.11.10"
