[package]
name = "scpeditor-bin"
version = "0.1.0"
edition = "2021"
authors = ["wasd243"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde_json = "1.0.149"

# Parser
w_parser = { path = "../crates/w_parser" }

# Exporter
ltmf = { path = "../crates/ltmf" }
