[package]
name = "scpeditor-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json.workspace = true

# Parser
w_parser = { path = "../crates/w_parser" }

# Exporter
ltmf = { path = "../crates/ltmf" }
