[package]
name = "scpeditor-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json.workspace = true
directories.workspace = true
log.workspace = true
env_logger.workspace = true

# Parser
w_parser = { path = "../crates/w_parser" }

# Exporter
ltmf = { path = "../crates/ltmf" }
