# The main wikidot -> HTML parser based on ftml

[package]
name = "Wparser"
version = "0.1.0"
edition = "2021"

[lib]
name = "Wparser"
crate-type = ["cdylib"]

[dependencies]
ftml = { git = "https://github.com/scpwiki/ftml", tag = "v1.40.0" }

time = "=0.3.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
