# The main wikidot -> HTML parser based on ftml

[package]
name = "w_parser"
version.workspace = true
edition.workspace = true

[lib]
name = "w_parser"
crate-type = ["rlib", "cdylib"]

[dependencies]
ftml = { git = "https://github.com/scpwiki/ftml", tag = "v1.40.0" } # This is parser library
wiki_css = { path = "../wiki_css" } # This is interceptor's preprocessor local library
kuchiki = "0.8"
once_cell = "1.21.4"
time = "=0.3.37" # This is time library, must be added in toml because of ftml parser
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
regex.workspace = true
