# The main wikidot -> HTML parser based on ftml

[package]
name = "w_parser"
version.workspace = true
edition.workspace = true

[lib]
name = "w_parser"
crate-type = ["rlib", "cdylib"]

[dependencies]
# Well, I don't know why wj team didn't publish that tag on GitHub, but it's seems like ftml stills good to use and very stable
ftml = "1.41.0"
wiki_css = { path = "../wiki_css" } # This is interceptor's preprocessor local library
kuchiki = "0.8"
once_cell = "1.21.4"
time = "=0.3.37" # This is time library, must be added in toml because of ftml parser
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
regex.workspace = true
