[package]
name = "ftml_client_py"
version = "0.1.0"
edition = "2024"

[lib]
name = "ftml_client_py"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0.18"
anyhow = "1.0"

dashmap = "6.0"

# 解析用
#redb = "4.1.0"

# AST + 高性能解析
#smallvec = "1.13"
#indexmap = "2.0"
regex = "1.12.3"
